Thêm tick vào các dịch vụ