@@ -1,16 +1,24 @@
 package com.dentalclinic.controller.dentist;
 
+import com.dentalclinic.repository.ServicesRepository;
+import com.dentalclinic.model.service.Services;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDate;
 import java.time.LocalTime;
-import java.util.Collections;
+import java.util.List;
 
 @Controller
 @RequestMapping("/dentist/appointments")
 public class DentistAppointmentController {
+
+    private final ServicesRepository servicesRepository;
+
+    public DentistAppointmentController(ServicesRepository servicesRepository) {
+        this.servicesRepository = servicesRepository;
+    }
 
     // ================= EXAMINATION =================
 
@@ -21,6 +29,8 @@ public class DentistAppointmentController {
             @RequestParam Long dentistUserId,
             Model model
     ) {
+        List<Services> services = servicesRepository.findAll();
+
         model.addAttribute("appointmentId", id);
         model.addAttribute("customerUserId", customerUserId);
         model.addAttribute("dentistUserId", dentistUserId);
@@ -30,28 +40,13 @@ public class DentistAppointmentController {
         model.addAttribute("startTime", LocalTime.of(8, 0));
         model.addAttribute("endTime", LocalTime.of(9, 0));
         model.addAttribute("requestedServiceName", "");
-        model.addAttribute("services", Collections.emptyList());
-        model.addAttribute("historyRecords", Collections.emptyList());
+
+        // 🔥 QUAN TRỌNG
+        model.addAttribute("services", services);
+
+        model.addAttribute("historyRecords", List.of());
         model.addAttribute("diagnosis", "");
         model.addAttribute("treatmentNote", "");
-
-        return "Dentist/examination";
-    }
-
-    @PostMapping("/{id}/examination")
-    public String saveExamination(
-            @PathVariable Long id,
-            @RequestParam Long customerUserId,
-            @RequestParam Long dentistUserId,
-            @RequestParam String diagnosis,
-            @RequestParam String treatmentNote,
-            Model model
-    ) {
-        model.addAttribute("successMessage", "Saved successfully");
-
-        model.addAttribute("appointmentId", id);
-        model.addAttribute("customerUserId", customerUserId);
-        model.addAttribute("dentistUserId", dentistUserId);
 
         return "Dentist/examination";
     }
@@ -65,6 +60,8 @@ public class DentistAppointmentController {
             @RequestParam Long dentistUserId,
             Model model
     ) {
+        List<Services> services = servicesRepository.findAll();
+
         model.addAttribute("appointmentId", id);
         model.addAttribute("customerUserId", customerUserId);
         model.addAttribute("dentistUserId", dentistUserId);
@@ -74,32 +71,14 @@ public class DentistAppointmentController {
         model.addAttribute("startTime", LocalTime.of(8, 0));
         model.addAttribute("endTime", LocalTime.of(9, 0));
         model.addAttribute("requestedServiceName", "");
-        model.addAttribute("services", Collections.emptyList());
+
+        // 🔥 QUAN TRỌNG
+        model.addAttribute("services", services);
+
         model.addAttribute("note", "");
         model.addAttribute("performedServicesJson", "[]");
         model.addAttribute("prescriptionNote", "[]");
 
-        // ⚠️ QUAN TRỌNG: đúng tên file HTML của bạn
-        return "Dentist/billing-note";
-    }
-
-    @PostMapping("/{id}/billing-transfer")
-    public String saveBilling(
-            @PathVariable Long id,
-            @RequestParam Long customerUserId,
-            @RequestParam Long dentistUserId,
-            @RequestParam(required = false) String note,
-            @RequestParam(required = false) String performedServicesJson,
-            @RequestParam(required = false) String prescriptionNote,
-            Model model
-    ) {
-        model.addAttribute("successMessage", "Saved successfully");
-
-        model.addAttribute("appointmentId", id);
-        model.addAttribute("customerUserId", customerUserId);
-        model.addAttribute("dentistUserId", dentistUserId);
-
-        // ⚠️ QUAN TRỌNG: đúng tên file HTML của bạn
         return "Dentist/billing-note";
     }
 }
